# manjaro.org

./: .gitignore  Dockerfile  LICENSE  README.MD  docker-build-no-cache  docker-run  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt  runserver
advertising/: models.py  views.py  wagtail_hooks.py
advertising/migrations/: 0001_initial.py  0002_advert_hidden.py
advertising/templates/: affiliates.html
blog/: models.py
blog/migrations/: 0001_initial.py  0002_auto_20220123_0435.py  0003_blogpagegalleryimage.py  0004_auto_20220123_1736.py  0005_auto_20220123_1928.py  0006_rename_body_blogpage_content.py  0007_blogpage_keywords.py  0008_auto_20220325_1600.py  0009_remove_blogpage_author.py
compare/: apps.py  models.py  packages.py  scheduler.py  views.py
compare/migrations/: 0001_initial.py  0002_auto_20220607_1223.py  0002_auto_20220611_1333.py  0002_auto_20220611_1837.py  0002_auto_20220616_1147.py  0003_alter_lastmodified_date.py  0003_auto_20220608_1614.py  0003_merge_0002_auto_20220611_1333_0002_auto_20220611_1837.py  0004_alter_packagemodel_url.py  0005_alter_packagemodel_url.py  0006_remove_packages_intro.py
compare/templates/: packages.html  (+2 more)
contact/: models.py
customblocks/: apps.py  blocks.py
dashforum/: apps.py  views.py  wagtail_hooks.py
docs/: apps.py  models.py
home/: apps.py  donations.py  models.py  views.py
manjaro/: __init__.py  urls.py  wsgi.py
menus/: blocks.py  models.py
search/: __init__.py  forum.py  github.py  gitlab.py  models.py  page.py  software.py  utils.py  views.py  wiki.py
users/: admin.py  models.py
(+221 files in other folders)
