[tool.poetry]
name = "yo"
version = "1"
description = "yo"
authors = ["Vitor Lopes <vmnlop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "5.0"
django = "^4.2.4"
django-extensions = "^3.2.3"
wagtail-django-recaptcha = "^1.0"
wagtailyoast = "^0.0.10"
puput = "^2.0.0"
django-cors = "^0.1"
django-tailwind = "^3.6.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
apscheduler = "^3.10.4"
django-debug-toolbar = "^4.2.0"
python-dateutil = "^2.8.2"
pymediawiki = "^0.7.3"
python-gitlab = "^3.15.0"
pygithub = "^1.59.1"
requests-cache = "^1.1.0"
gevent = "^23.7.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.11.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
